Added Webpack Encore, Sass, Bootstrap

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -39,4 +39,9 @@
         Sign in
     </button>
 </form>
+<form action="/register">
+    <button class="btn btn-lg btn-primary" type="submit">
+        Or register
+    </button>
+</form>
 {% endblock %}
