--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,13 +9,18 @@
 
     <h1>Register</h1>
 
-    {{ form_start(registrationForm, {'attr': {'novalidate': 'novalidate'}}) }}
+    {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.name) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn btn-lg btn-primary">Register</button>
     {{ form_end(registrationForm) }}
+    <form action="login">
+        <button class="btn btn-lg btn-primary" type="submit">
+            Or login
+        </button>
+    </form>
 {% endblock %}
