--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,10 +1,16 @@
 {% extends 'base.html.twig' %}
-    
-{% block body %}
-    <h1>Page not found</h1>
 
-    <p>
-        The requested page couldn't be located. Checkout for any URL
-        misspelling or return to the homepage</a>.
-    </p>
+{% block body %}
+    <div class="not-found-wrapper">
+    <div class="not-found-content">
+    <h1>404</h1>
+    <h2>Lost in the woods?</h2>
+    <p>Sorry, we couldn't find the page you're looking for. Perhaps you're mistyped the URL?</p>
+    <form action="/">
+        <button class="btn btn-outline-success" type="submit">
+            Hurry up, take me home!
+        </button>
+    </form>
+    </div>
+</div>
 {% endblock %}
