Added styles for registration, login and confirmation pages.

--- a/templates/confirmation/index.html.twig
+++ b/templates/confirmation/index.html.twig
@@ -3,12 +3,10 @@
 {% block title %}Confirm your email{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello!</h1>
+<div class="confirmation-wrapper">
+    <div class="confirmation-content">
+    <h1>Nice to meet you!</h1>
     <p>We've sent you an email to confirm your email address. Before you can login, you need to confirm your email address.</p>
 
     <ol>
@@ -16,5 +14,6 @@
         <li>Look for a message from HogsHead with the subject line "Please Confirm your Email".</li>
         <li>Open the email and click "Confirm my Email". The link will expire in 1 hour.</li>
     </ol>
+</div>
 </div>
 {% endblock %}
