--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,2 +1,4 @@
 @import '~bootstrap/scss/bootstrap';
 @import './pages/404error.scss';
+@import './pages/confirmation.scss';
+@import './pages/login_and_register.scss';
