--- a/templates/hogshead/fandoms.html.twig
+++ b/templates/hogshead/fandoms.html.twig
@@ -3,11 +3,15 @@
 {% block title %}Hogshead.com{% endblock %}
 
 {% block body %}
-	<body>
-		<h1 class="h3 mb-3 fw-normal">All Fandoms:</h1>
+	{% include 'hogshead/header.html.twig'%}
 
+	<body>
+		<h1 class="h3 mb-3 fw-normal mx-5">All Fandoms:</h1>
+
+		<div class="mx-5">
 		{% for fandom in fandoms %}
 			<a href="{{ path('fanfics', { name: fandom.name }) }}">{{ fandom }}</a><br>
 		{% endfor %}
+	</div>
 	</body>
 {% endblock %}
