Absolute image src urls were replaced with relative paths. Changed some titles.

--- a/assets/styles/pages/404error.scss
+++ b/assets/styles/pages/404error.scss
@@ -1,6 +1,6 @@
 .not-found-wrapper {
     position: relative;
-    background: url(http://hogshead.com/images/404error-min.jpg) no-repeat center center fixed;
+    background: url(/public/images/404error-min.jpg) no-repeat center center fixed;
     background-size: cover;
     width: 100vw;
     height: 100vh;
