--- a/assets/styles/pages/confirmation.scss
+++ b/assets/styles/pages/confirmation.scss
@@ -1,6 +1,6 @@
 .confirmation-wrapper {
         position: relative;
-        background: url(http://hogshead.com/images/confirmation-min.jpg) no-repeat center center fixed;
+        background: url(/public/images/confirmation-min.jpg) no-repeat center center fixed;
         background-size: cover;
         width: 100vw;
         height: 100vh;
