--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+{% block title %}404 Error{% endblock %}
 {% block body %}
     <div class="not-found-wrapper">
     <div class="not-found-content">
