--- a/templates/hogshead/header.html.twig
+++ b/templates/hogshead/header.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand mx-5" href="/">
-    <img src="http://hogshead.com/images/logo.jpg" width="40" height="40" alt="">
+    <img src="/images/logo.jpg" width="40" height="40" alt="">
     HogsHead
   </a>
 
